main screen buttons

--- a/BankWebApp/Views/Home/Index.cshtml
+++ b/BankWebApp/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="justify-content-center">
+    <button type="button" class="btn btn-primary btn-lg btn-block" asp-controller="" asp-action="">Ja tenho conta</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-block" asp-controller="" asp-action="">Criar conta</button>
 </div>
