--- a/BankWebApp/Views/Home/Index.cshtml
+++ b/BankWebApp/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 <div class="justify-content-center">
     <button type="button" class="btn btn-primary btn-lg btn-block" asp-controller="" asp-action="">Ja tenho conta</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-block" asp-controller="" asp-action="">Criar conta</button>
+    <a type="button" class="btn btn-secondary btn-lg btn-block" asp-controller="Accounts" asp-action="Create">Criar conta</a>
 </div>
