Create account is right

--- a/BankWebApp/Views/Shared/AccountsLayout.cshtml
+++ b/BankWebApp/Views/Shared/AccountsLayout.cshtml
@@ -22,6 +22,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="">Deposit</a>
                         </li>
+                        <li class="nav-item">
+                            <p class="nav-link text-dark">@ViewData["Name"]</p>
+                        </li>
+                        <li class="nav-item">
+                            <p class="nav-link text-dark">@ViewData["AccNumber"]</p>
+                        </li>
                     </ul>
                 </div>
             </div>
