--- a/BankWebApp/Views/Accounts/Create.cshtml
+++ b/BankWebApp/Views/Accounts/Create.cshtml
@@ -1,22 +1,22 @@
-﻿@model BankWebApp.Models.ViewModel.AccountFormViewModel
+﻿@model BankWebApp.Models.Owner
 <h2>Create Your Account</h2>
 <div class="row">
     <div class="col-md-6">
         <form asp-action="Create">
 
             <div class="form-group row">
-                <label asp-for="Owner.Name" class="form-control-plaintext"></label>
-                <input asp-for="Owner.Name" />
+                <label asp-for="Name" class="form-control-plaintext"></label>
+                <input asp-for="Name" />
             </div>
 
             <div class="form-group row">
-                <label asp-for="Owner.BirthDate" class="form-control-plaintext"></label>
-                <input asp-for="Owner.BirthDate" />
+                <label asp-for="BirthDate" class="form-control-plaintext"></label>
+                <input asp-for="BirthDate" />
             </div>
 
             <div class="form-group row">
-                <label asp-for="Owner.Cpf" class="form-control-plaintext"></label>
-                <input asp-for="Owner.Cpf" />
+                <label asp-for="Cpf" class="form-control-plaintext"></label>
+                <input asp-for="Cpf" />
             </div>
 
             <div class="form-group row">
@@ -28,6 +28,7 @@
             <hr />
             <div class="form-group row">
                 <input type="submit" value="Create" class="btn btn-dark" />
+              <!--  <input type="hidden" asp-for="Model.Account"/>
             </div>
 
         </form>
