--- a/BankWebApp/Views/Accounts/Login.cshtml
+++ b/BankWebApp/Views/Accounts/Login.cshtml
@@ -1,22 +1,22 @@
-﻿<h2>Login</h2>
+﻿@model BankWebApp.Models.ViewModel.LoginForm
+<h2>Login</h2>
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Login">
-
+        <form asp-action="Logged">
             <div class="form-group row">
-                <label  class="form-control-plaintext"></label>
-                <input/>
+                <label asp-for="AccNumber" class="form-control-plaintext"></label>
+                <input asp-for="AccNumber"/>
             </div>
 
             <div class="form-group row">
-                <label  class="form-control-plaintext"></label>
-                <input />
+                <label  asp-for="Password" class="form-control-plaintext"></label>
+                <input asp-for="Password"/>
             </div>
 
             <hr />
             <div class="form-group row">
                 <input type="submit" value="Create" class="btn btn-dark" />
-                <input type="hidden" asp-action="Logged"/>
+                <input type="hidden" asp-action="Logged" asp-route-id=""/>
             </div>
         </form>
     </div>
