--- a/BankWebApp/Views/Accounts/Login.cshtml
+++ b/BankWebApp/Views/Accounts/Login.cshtml
@@ -15,7 +15,7 @@
 
             <hr />
             <div class="form-group row">
-                <input type="submit" value="Create" class="btn btn-dark" />
+                <input type="submit" value="Login" class="btn btn-dark" />
                 <input type="hidden" asp-action="Logged" asp-route-id=""/>
             </div>
         </form>
