--- a/BankWebApp/Views/Shared/AccountsLayout.cshtml
+++ b/BankWebApp/Views/Shared/AccountsLayout.cshtml
@@ -20,13 +20,23 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="">Deposit</a>
+                            <p class="nav-link text-dark">Owner: @ViewData["Owner"] </p>
                         </li>
                         <li class="nav-item">
-                            <p class="nav-link text-dark">@ViewData["Name"]</p>
+                            <p class="nav-link text-dark">Your Account number: @ViewData["Number"]</p>
                         </li>
+
+                         <li class="nav-item">
+                            <a class="nav-link text-dark">Account Actions: </a>
+                        </li>
+
                         <li class="nav-item">
-                            <p class="nav-link text-dark">@ViewData["AccNumber"]</p>
+                            <a class="nav-link text-dark">Deposit</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a asp-action="WithDraw"class="nav-link text-dark">WithDraw</a>
+                            <input type="hidden "asp-for-id="Model"/>
                         </li>
                     </ul>
                 </div>
