--- a/BankWebApp/Views/Accounts/Index.cshtml
+++ b/BankWebApp/Views/Accounts/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = "AccountsLayout";
     ViewData["Number"] = Model.AccNumber;
-    ViewData["Owner"] = Model.OwnersName;
+    ViewData["Owner"] = Model.Owner.Name;
 }
 <div class="justify-content-center">
     <h2>Your Account Menu</h2>
