--- a/BankWebApp/Views/Accounts/Deposit.cshtml
+++ b/BankWebApp/Views/Accounts/Deposit.cshtml
@@ -2,7 +2,7 @@
 <h2></h2>
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Deposit">
+        <form asp-action="DepositPost">
 
             <div class="row">
                 <div class="col-md-6">
