--- a/BankWebApp/Views/Accounts/Create.cshtml
+++ b/BankWebApp/Views/Accounts/Create.cshtml
@@ -1,10 +1,9 @@
-﻿@model BankWebApp.Models.Owner
-<h2>Create Your Account</h2>
+﻿<h2>Create Your Account</h2>
 <div class="row">
     <div class="col-md-6">
         <form asp-action="Create">
-
-            <div class="form-group row">
+            @{
+            /*<div class="form-group row">
                 <label asp-for="Name" class="form-control-plaintext"></label>
                 <input asp-for="Name" />
             </div>
@@ -30,7 +29,7 @@
                 <input type="submit" value="Create" class="btn btn-dark" />
               <!--  <input type="hidden" asp-for="Model.Account"/>
             </div>
-
+            */}
         </form>
     </div>
 </div>
