--- a/BankWebApp/Views/Accounts/Index.cshtml
+++ b/BankWebApp/Views/Accounts/Index.cshtml
@@ -1,14 +1,47 @@
-﻿@model BankWebApp.Models.ViewModel.AccountMenuViewModel
+﻿@model IEnumerable<BankWebApp.Models.Account>
+
 @{
-    Layout = "AccountsLayout";
-    ViewData["Number"] = Model.AccNumber;
+    ViewData["Title"] = "Index";
 }
-<div class="justify-content-center">
-    <h2>Your Account Menu</h2>
-    <hr />
-    <h4>Here is where you can acces all of your operations</h4>
-    <div class="btn-outline-primary" style="button">
-        <a asp-action="Deposit">Deposit</a>
-        <input type="hidden" asp-for="@Model.Account"/>
-    </div>
-</div>
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Balance)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Number)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Password)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Balance)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Number)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Password)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
