--- a/BankWebApp/Views/Accounts/Create.cshtml
+++ b/BankWebApp/Views/Accounts/Create.cshtml
@@ -1,40 +1,37 @@
-﻿@model BankWebApp.Models.Account
-
-@{
-    ViewData["Title"] = "Create";
-}
-
-<h1>Create</h1>
-
-<h4>Account</h4>
-<hr />
+﻿@model Account
+<h2>Create Your Account</h2>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" />
-                <span asp-validation-for="Balance" class="text-danger"></span>
+            <div class="form-group row">
+                <label asp-for="Holder" class="form-control-plaintext"></label>
+                <input asp-for="Holder" />
+                <span asp-validation-for="Holder" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Number" class="control-label"></label>
-                <input asp-for="Number" class="form-control" />
-                <span asp-validation-for="Number" class="text-danger"></span>
+
+            <div class="form-group row">
+                <label asp-for="HolderBirthDate" class="form-control-plaintext"></label>
+                <input asp-for="HolderBirthDate" />
+                <span asp-validation-for="HolderBirthDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+
+            <div class="form-group row">
+                <label asp-for="Email" class="form-control-plaintext"></label>
+                <input asp-for="Email" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+
+            <div class="form-group row">
+                <h4>Create a Password!</h4>
+                <label asp-for="Password" class="form-control-plaintext"></label>
+                <input asp-for="Password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+
+            <hr />
+            <div class="form-group row">
+                <input type="submit" value="Create" class="btn btn-dark" />
+             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
