--- a/BankWebApp/Views/Accounts/Created.cshtml
+++ b/BankWebApp/Views/Accounts/Created.cshtml
@@ -1,10 +1,10 @@
-﻿
+﻿@model Account
 <h1>
     <div class="justify-content-xxl-center">
         <h2>
             Congratulations! Account Created Sucessfuly
         </h2>
-       <!-- <h3>Your Account number is: //Html.DisplayFor(ow => ow.Account.Number)</h3>
+        <h3>Your Account number is: @Html.DisplayFor(acc => acc.Number)</h3>
     </div>
     <div>
         <a type="button" class="btn btn-dark btn-lg btn-block" asp-controller="Home" asp-action="Index">Back to Home</a>
