--- a/BankWebApp/Views/Accounts/Login.cshtml
+++ b/BankWebApp/Views/Accounts/Login.cshtml
@@ -2,15 +2,17 @@
 <h2>Login</h2>
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Logged">
+        <form asp-action="Login">
             <div class="form-group row">
-                <label asp-for="AccNumber" class="form-control-plaintext"></label>
-                <input asp-for="AccNumber"/>
+                <label asp-for="Number" class="form-control-plaintext"></label>
+                <input asp-for="Number" />
+                <span asp-validation-for="Number" class="text-danger"></span>
             </div>
 
             <div class="form-group row">
-                <label  asp-for="Password" class="form-control-plaintext"></label>
-                <input asp-for="Password"/>
+                <label asp-for="Password" class="form-control-plaintext"></label>
+                <input asp-for="Password" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
             <hr />
