TransactionRecordController and service

--- a/BankWebApp/Views/TransactionRecords/Index.cshtml
+++ b/BankWebApp/Views/TransactionRecords/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -35,11 +35,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TransactionType)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
