--- a/BankWebApp/Views/Accounts/Index.cshtml
+++ b/BankWebApp/Views/Accounts/Index.cshtml
@@ -10,13 +10,13 @@
     <h4>Here is where you can acces all of your operations</h4>
     <div class="col-md-6">
         <div class="list-group-horizontal-xxl">
-            <a type="button" class="btn btn-secondary btn-lg btn-block" asp-action="Deposit">Deposit</a>
-            <input type="hidden" asp-for="Id"/>
+            <a type="button" class="btn btn-secondary btn-lg btn-block" asp-controller="TransactionRecords" asp-action="Deposit">Deposit</a>
+            <input type="hidden" asp-route-id="@Model.Id"/>
         </div>
         <hr />
         <div class="list-group-horizontal-xxl">
-            <a type="button" class="btn btn-secondary btn-lg btn-block" asp-action="WithDraw">WithDraw</a>
-            <input type="hidden" asp-for="Id" />
+            <a type="button" class="btn btn-secondary btn-lg btn-block" asp-controller="TransactionRecords" asp-action="WithDraw">WithDraw</a>
+            <input type="hidden" asp-route-id="@Model.Id"/>
         </div>
     </div>
 </div>
