--- a/BankWebApp/Views/TransactionRecords/Deposit.cshtml
+++ b/BankWebApp/Views/TransactionRecords/Deposit.cshtml
@@ -1,29 +1,19 @@
 ﻿@model BankWebApp.Models.TransactionRecord
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Deposit";
 }
 
-<h1>Create</h1>
-
-<h4>TransactionRecord</h4>
+<h2>@ViewData["Title"]</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Deposit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Moment" class="control-label"></label>
-                <input asp-for="Moment" class="form-control" />
-                <span asp-validation-for="Moment" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Amount" class="control-label"></label>
                 <input asp-for="Amount" class="form-control" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
