--- a/BankWebApp/Views/TransactionRecords/Deposit.cshtml
+++ b/BankWebApp/Views/TransactionRecords/Deposit.cshtml
@@ -5,18 +5,22 @@
 }
 
 <h2>@ViewData["Title"]</h2>
+<h3>AccountId: @Model.AccountId</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Deposit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="DepositConfirmed">
+            <input type="hidden" asp-for="AccountId" />
             <div class="form-group">
                 <label asp-for="Amount" class="control-label"></label>
                 <input asp-for="Amount" class="form-control" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
+            @{
+                Model.AccountId = Model.AccountId;
+            }
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Deposit" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -25,4 +29,9 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
 
