--- a/BankWebApp/Views/Home/Index.cshtml
+++ b/BankWebApp/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 }
 <div class="justify-content-center">
     <a type="button" class="btn btn-primary btn-lg btn-block" asp-controller="Accounts" asp-action="Login">Already have an Account</a>
-    <a type="button" class="btn btn-secondary btn-lg btn-block" asp-controller="Accounts" asp-action="Create">Create Account</a>
+    <a type="button" class="btn btn-success btn-lg btn-block" asp-controller="Accounts" asp-action="Create">Create Account</a>
 </div>
