--- a/BankWebApp/Views/Shared/AccountsLayout.cshtml
+++ b/BankWebApp/Views/Shared/AccountsLayout.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - BankWebApp</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <title>J&J Bank Website</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-Lumen.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BankWebApp.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Accounts" asp-action="Index">BankWebApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">J&J Bank</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,16 +20,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <p class="nav-link text-dark">Owner: @ViewData["Owner"] </p>
+                            <p class="nav-link active">Owner: @ViewData["Owner"] </p>
                         </li>
                         <li class="nav-item">
-                            <p class="nav-link text-dark">Your Account number: @ViewData["Number"]</p>
+                            <p class="nav-link active">Your Account number: @ViewData["Number"]</p>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    <br />
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
